--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <h1>Hello World, we are software developers!</h1>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+</head>
+
+<body>
+  <h1 id="title">freeCodeCamp Survey Form</h1>
+  <p id="description">Thank you for taking the time to help us improve the platform</p>
+  <form id="survey-form">
+    <label id="name-label"></label>
+    <input type="text" id="name" placeholder="Enter name" /></br>
+    <label id="email-label"></label>
+    <input type="email" id="email" placeholder="Enter email" /></br>
+    <label id="number-label"></label>
+    <input type="number" id="number" min="2" max="10" placeholder="Enter number" /></br>
+    <select id="dropdown">
+      <option>Test 1</option>
+      <option>Test 2</option>
+    </select>
+  </form>
+</body>
+
 </html>
